updated at: 2023-04-25 19:17, 【VRC想定】ボクセルティーカップ - 魚屋 - BOOTH

--- a/VRChat/88/1053388.html
+++ b/VRChat/88/1053388.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "9naPmVXHO6kYS6GlVu7K6rmhqvBBZ977dw7ZcstIzvE="></script>
+    "rgnG4LEijM4rn8mMnSEViPDAioHQh+pMSlxC5JmJoeA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRC想定】ボクセルティーカップ","description":"VRchatでの使用を想定したボクセル製ティーカップです。\nポリゴン数の都合上アニメーションオーバーライドでの使用を推奨しています。\n使っているのを作者に見せると跳ね回ります。","url":"https://booth.pm/ja/items/1053388","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/5a9b2887-501c-43fe-ad46-c67ddd6f6125/i/1053388/39d532fa-62af-4fb3-bf80-bdc95d83c15e_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="9naPmVXHO6kYS6GlVu7K6rmhqvBBZ977dw7ZcstIzvE="></script>
+    nonce="rgnG4LEijM4rn8mMnSEViPDAioHQh+pMSlxC5JmJoeA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -153,7 +155,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1053388/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               5
@@ -168,14 +170,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1053388/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               5
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
