--- a/VRChat/56/1052956.html
+++ b/VRChat/56/1052956.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "RMuCFI3PMq7g49c5bdAY7loGTU4bX2LJ1fQc17izDU0="></script>
+    "FSQBOP30ig0m+GNOz4yc/wVXVZebEwpZwO7zFuGk3Y0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat向け】ハロウィン小物セット","description":"◆無料版と有料版に中身の違いはありません。◆\n\n■商品概要\nVRChatでの仕様を想定したハロウィン向けの小物です。\nおばけは光源とアニメーションを持っています。\nネックレスはボーンが入っており、ダイナミックボーンで揺らすことが出来る他、首の形に合わせて曲げることが出来ます。\nunitypackageを同梱しているので簡単に導入することが出来ます。\nおばけ △704ポリゴン\n帽子 △464ポリゴン\nネックレス △456ポリゴン\n\n■免責事項\n本データの利用によって生じたいかなる損害について、当方は一切の責任を負いません。\n\n■禁止事項\n・本データの再配布、転載を禁止します。\n・本データの作者を偽る行為を禁止します。\n・本データを用いた迷惑行為、他者を侮辱する行為\n・宗教的、政治的な用途での利用\n\n■許可事項\n・改変\n・本データを用いたアバターやワールドをVRChat上にアップロードする行為\n・本モデルを動画、静止画などの形で公共の場にアップロードすること\n\n上記規約は告知なく改変される可能性があります。\n\n■更新履歴\n2018/10/14: v1.0\n\n■連絡先\n黒金ニエロ\nbooth https://niello.booth.pm/\nホームページ https://niellochannel.wixsite.com/ojousama\nTwitter @Niello_virtual","url":"https://booth.pm/ja/items/1052956","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/8285a99a-4ad9-4431-9d71-56e82927bcf2/i/1052956/4f4a1d41-1537-45aa-b1a8-7269b6a09154_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="RMuCFI3PMq7g49c5bdAY7loGTU4bX2LJ1fQc17izDU0="></script>
+    nonce="FSQBOP30ig0m+GNOz4yc/wVXVZebEwpZwO7zFuGk3Y0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1052956/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               49
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1052956/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               49
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
