updated at: 2023-04-25 19:17, リアルナイフ３点セット - シンヤの模造武具 - BOOTH

--- a/VRChat/30/1052830.html
+++ b/VRChat/30/1052830.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "3X3Dxzcl713n73zhjfdJFdYyKQanGGEtwc8R1RWxrOY="></script>
+    "CMEpBaB915iYlC1VsZdrH2O0vM5hmkhvjmKwgcvi7G8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"リアルナイフ３点セット","description":"リアル風のナイフ３点セットです。\n\nカランビットナイフはオリジナルデザイン！　ほかのモデルも低ポリなのでいっぱい使えます！\n\n・カランビットナイフ　　△846\n・ラブレスナイフ　　　　△466\n・タクティカルナイフ　　△294","url":"https://booth.pm/ja/items/1052830","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/9b92b4aa-727e-4ad3-8a66-111e77c11365/i/1052830/619e582d-df72-42e6-b707-5a7425826376_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="3X3Dxzcl713n73zhjfdJFdYyKQanGGEtwc8R1RWxrOY="></script>
+    nonce="CMEpBaB915iYlC1VsZdrH2O0vM5hmkhvjmKwgcvi7G8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1052830/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               79
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1052830/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               79
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
