--- a/VRChat/88/1052488.html
+++ b/VRChat/88/1052488.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "DqQhbJuH3rrF3DR/sR2nxkFiVNvvR1ibRY3Aa/FHzIU="></script>
+    "/IR2a3OpYf0RtH4UlDZ0JGshIiaGcRSzthDBuUhnbXE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向け　紅葉のアクセサリ（かんざし）","description":"VRchat向けアクセサリ：紅葉のアクセサリ（かんざし）\nポリゴン数266のFBXファイルと\nテクスチャが入っております\n\n紅葉と紅葉の花は裏側のメッシュが張っておりません\nCubeds-Unity-Shadersなどで裏側の描写をお勧めします\n（写真はCubeds-Unity-Shadersを使用しています）\n\n商用利用・私的利用に対してご自由にお使いください\n大々的な再配布はお止めください","url":"https://booth.pm/ja/items/1052488","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/eaae416f-80ca-4582-baa6-17cd5c7d41ab/i/1052488/d9b2ee6f-a875-41b6-b953-7c4ebe6cc5f0_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="DqQhbJuH3rrF3DR/sR2nxkFiVNvvR1ibRY3Aa/FHzIU="></script>
+    nonce="/IR2a3OpYf0RtH4UlDZ0JGshIiaGcRSzthDBuUhnbXE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1052488/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               39
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1052488/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               39
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
