--- a/VRChat/37/1052437.html
+++ b/VRChat/37/1052437.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "ZZfZ9ZlHpionDWrOntCxEND1jXo65dvpc/lVOHaB9wE="></script>
+    "Sia+itKRlSzRGk50mkJ2tPJDH+0vCOk5tSlTtF3FvZ8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRchat向けアバター用ネックレスチェーン","description":"■好きな物がネックレスにできるVRchat向けのネックレスチェーンです\n\n三角面換算で252ポリゴンとなっております。\nダイナミックボーンを使用する用のモデルと、ダイナミックボーンを使用しない用モデルが入っています。\n\n■使い方\nHumanoidRigで使用する場合は上半身ボーンの子オブジェクトにして使って下さい。\n詳しい設定は画像3枚目と4枚目を参考にしてください。\n\n\n■禁則事項\n政治的利用\n特定の信条や宗教のための使用\n公序良俗に反する行為\n再配布\nその他製作者が不適切と判断したもの\n\n■やっていい事\n改変","url":"https://booth.pm/ja/items/1052437","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/9585a184-fff0-488e-8a9d-612c758951c2/i/1052437/f696a904-4731-4311-9f23-783f754fd226_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ZZfZ9ZlHpionDWrOntCxEND1jXo65dvpc/lVOHaB9wE="></script>
+    nonce="Sia+itKRlSzRGk50mkJ2tPJDH+0vCOk5tSlTtF3FvZ8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1052437/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               210
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1052437/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               210
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
