--- a/VRChat/19/1386519.html
+++ b/VRChat/19/1386519.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "uB+zf/6KLKf9+kSSXLdv28PwFL4e0UNjbfJOE2fdI80="></script>
+    "cVywDUag1ypahJrl8YYwv6IjAzqp10YS/2OOF2eDQ/E="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル「青龍」","description":"※購入前に無料版で動作確認する事をお勧めします\n※NFTに関する事への使用を禁止します。※\n※Prohibited to be used for anything related to NFT.※\n\n※注意！※　この3DモデルはVRCSDK\"2\"でセットアップされています。\n\nVRChatでの使用を想定した3Dモデルです。\nunitypackageファイルにVRC Avater Descriptor設定済みのprefabを同梱しております。(事前にVRCSDKを導入してください)\n\n・ポリゴン数：35151(削減モデル：23891)\n・Humanoidボーン設定済\n・デスクトップモードのみ動作確認済み\n・リップシンク：無し\n・アイトラッキング：無し\n\n※通常版はシェーダーにarktoon-shadersを使用しています。事前に同梱されているunitypackageをインポートしてください。\n[配布元]\n・https://booth.pm/ja/items/1027997\n・https://github.com/synqark/Arktoon-Shaders\n\n※その他、不明な点が有る場合は製作者へ御相談ください。\n\n製作：RYU\n[booth]https://ryu-bt.booth.pm/\n[twitter]https://twitter.com/beam_trident\n\n※2019/05/26追記\n・通常版にポリゴン数削減モデルを新しく同梱(エクスプローラー上でファイルを上書きすると差し替える事が出来ます)","url":"https://booth.pm/ja/items/1386519","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"1500"},"image":"https://booth.pximg.net/c/620x620/497a17f3-8b49-4d3f-b0de-666716ecfcf8/i/1386519/d683de89-3c2e-412c-8f81-501da4e48160_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="uB+zf/6KLKf9+kSSXLdv28PwFL4e0UNjbfJOE2fdI80="></script>
+    nonce="cVywDUag1ypahJrl8YYwv6IjAzqp10YS/2OOF2eDQ/E="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1386519/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               117
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1386519/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               117
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
