updated at: 2023-04-25 19:18, 【VRChat】全然涼しくならないうちわ【改変自由】 - そば屋の製面所（２４時間営業） - BOOTH

--- a/VRChat/09/1386409.html
+++ b/VRChat/09/1386409.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "ZPRxggF9UsDMGeMv1tBMR9eM1x6rffLgVN6nGvtj+Pg="></script>
+    "W/spUZVcwN+I7ycR6KuwQiAEpU2+Y7jOf+LnY7OWvd8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat】全然涼しくならないうちわ【改変自由】","description":"VRChatの利用を想定して制作したうちわです\nVRなので仰げば仰ぐほど疲れるだけですが、もしかするとVR風を感じて涼しくなるかも？","url":"https://booth.pm/ja/items/1386409","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/e94afb69-0d10-4493-8402-671fdaa09d79/i/1386409/37e0d582-aa8b-419b-b0b6-042621f14f8c_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ZPRxggF9UsDMGeMv1tBMR9eM1x6rffLgVN6nGvtj+Pg="></script>
+    nonce="W/spUZVcwN+I7ycR6KuwQiAEpU2+Y7jOf+LnY7OWvd8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1386409/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               63
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1386409/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               63
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
