--- a/VRChat/63/1356563.html
+++ b/VRChat/63/1356563.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "BmV1SrkjIElTqA8gLclBj9Enshxj1ZMsc9Amdi35zHU="></script>
+    "B+h6hf1jIQYHixvKlp8aF4lbYVgDYp2Md8MKX7jhZXQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル『グリ』(ver.5.1.0)","description":"オリジナル3Dモデル『グリ』\nUnityのHumanoidに対応しているモデルです。\n・SDK3.0設定済みサンプルプレハブを同梱してます。\n・[Guri(.prefab)]には(Phys Bone)が設定済みで服、かばんが揺らせられるようになってます。\n・VRM同梱済み","url":"https://booth.pm/ja/items/1356563","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/8c71c490-ea94-492a-9ac9-6b5ecea92123/i/1356563/6f065d1f-3eef-4b42-9c95-ecab0fe2794e_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="BmV1SrkjIElTqA8gLclBj9Enshxj1ZMsc9Amdi35zHU="></script>
+    nonce="B+h6hf1jIQYHixvKlp8aF4lbYVgDYp2Md8MKX7jhZXQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -180,7 +182,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1356563/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               716
@@ -195,14 +197,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1356563/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               716
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
