--- a/VRChat/62/1386462.html
+++ b/VRChat/62/1386462.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "BhTKc/zVgh4XTTAd7jwojfLUKYTXZPSPh4/j6UCKJrM="></script>
+    "+JNqsuQ6zjwqOlHJC1+LBOf4m5SvNfT8CeN8EN9XTJA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Laurel Crown","description":"-特徴-\n月桂樹の草冠と星の装飾のモデルデス\n草冠と装飾でマテリアルは分けていますデス\n草冠は片面ポリゴンのため両面表示出来るシェーダー推奨デス\n草冠のUV展開はあえてバラバラにしていますデス\nポリゴン数　△１０８６\n製作時Unityバージョン　2018.4.20f1\n\n-更新履歴-\n2020年12月19日\nUnityパッケージ化\n データ内の日本語文字を英語文字に修正\n メッシュの大きさを修正\n メッシュデータを1つにまとめる修正\n\t(星を消して使用したい場合はNonStarsマテリアルを星部分へ使用してもらえればと思います)\n\n-内容物-\n・Laurel Crown.fbx\n・Laurel Crown.unitypackage\n・Laurel Crown_UV.png\n・更新履歴.txt\n\n-利用規約-\n当モデルは、憂人本家が作成した3Dオブジェクトデス\n当モデルデータの利用者はモデルデータの利用をもって本利用規約に同意したものとみなしますデス\n\nVRChatやUnity製作物やMMD等での利用が可能デス\n改変やペデスタル等での二次配布や商用利用が可能デス\n\n再販や悪意のある利用はしないで下さいデス\n\n利用規約はダウンロード時点での情報ではなく最新の情報が優先されますデス\n当モデルで生じたいかなる損害やトラブルに対して憂人本家は一切責任を負いませんデス\n日本国の著作権法に保護された著作物であることをご留意くださいデス","url":"https://booth.pm/ja/items/1386462","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/b38e460c-5ac5-4c59-aaae-e30f1fceea3a/i/1386462/7174ea12-a7b8-4741-a567-e6e20eca7ea5_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="BhTKc/zVgh4XTTAd7jwojfLUKYTXZPSPh4/j6UCKJrM="></script>
+    nonce="+JNqsuQ6zjwqOlHJC1+LBOf4m5SvNfT8CeN8EN9XTJA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1386462/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               528
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1386462/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               528
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
