updated at: 2023-04-25 19:21, フレアビキニ｜#VRoid - #YUINOESTORE - BOOTH

--- a/VRChat/37/1385037.html
+++ b/VRChat/37/1385037.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "DGhWQZrFBsP3u9JdDvl4cGeNs4MpfIJ2ekyVZ/hoRt0="></script>
+    "+yveXJ4ZphsMAozVL4J6aBcQJqkou2XfOMSm7wGz21U="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"フレアビキニ｜#VRoid","description":"体系カバーも兼ねたフレアトップビキニです。\nふんわりしてるトップだけど下から覗いてもインナーがあるから大丈夫！\n恥ずかしがりやな女の子にぴったりです。\n肌の影は別データとなっているので自由度無限大♪\n\nVRoid Studioのワンピースに使用する想定で制作しています。\n\nサマーサンダル\nhttps://yui-noe.booth.pm/items/1385013\n\nオペラグローブ\nhttps://yui-noe.booth.pm/items/1329942","url":"https://booth.pm/ja/items/1385037","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"2000","highPrice":"2500"},"image":"https://booth.pximg.net/c/620x620/58c3a4b7-3cf8-4d35-b645-655d8f4315aa/i/1385037/c74e0871-e6e7-4473-a857-7000dad48d60_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="DGhWQZrFBsP3u9JdDvl4cGeNs4MpfIJ2ekyVZ/hoRt0="></script>
+    nonce="+yveXJ4ZphsMAozVL4J6aBcQJqkou2XfOMSm7wGz21U="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1385037/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               299
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1385037/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               299
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
