updated at: 2023-04-25 19:21, パステルカラーのリコーダー - lirili - BOOTH

--- a/VRChat/00/1384800.html
+++ b/VRChat/00/1384800.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "yjn5g2n2RyWIdboKAa2D8Ut0cnirGkfCiWKj7OZyR6k="></script>
+    "O5fu+txOAmqkHzgynT3IcU0sLTdCCXl8uNrnNp82fvI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"パステルカラーのリコーダー","description":"\n[3Dモデリングをしてみよう！]最初のモデルです。\nモデリングの練習で製作したリコーダーです。\nVRCHATでの使用を想定しています。\n自由にお使いください。\n\n\n※シェーダが含まれていません。","url":"https://booth.pm/ja/items/1384800","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/dde775b2-de46-4120-9a97-372268808938/i/1384800/73087a1a-1af9-46ef-8caf-b7805d4fc493_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="yjn5g2n2RyWIdboKAa2D8Ut0cnirGkfCiWKj7OZyR6k="></script>
+    nonce="O5fu+txOAmqkHzgynT3IcU0sLTdCCXl8uNrnNp82fvI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,10 +160,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1384800/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              678
+                              680
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1384800/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              678
+                              680
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
