updated at: 2023-04-25 19:23, インテリアライト（VRChat想定） - Remit General factory - BOOTH

--- a/VRChat/18/1051118.html
+++ b/VRChat/18/1051118.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "vZh4YczP58XPy7+t3dopef1VmeBs0rbVflckCeZOwYE="></script>
+    "lScrlh7/TgrX2XQoKqeFdid83TL3bX5DxVc9BJmj7ig="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"インテリアライト（VRChat想定）","description":"VRChat上で使用されることを想定したインテリアライトのモデルです。\nワールドに設置して使うことを想定しております。\n\n【ポリゴン数・テクスチャ】\n・インテリアライト（VRChat想定）　△7001\n\n【内容物】\n・インテリアライト（VRChat想定）.unitypackage\n・Readme.txt\n\n【利用規約】\n▲CC0で著作権を放棄し、パブリックドメインに提供します。ご自由にお使いください。\nhttps://creativecommons.org/publicdomain/zero/1.0/deed.ja\n\n・クレジット記載不要、商業利用可\n\n・このモデルの作成者を騙ることの禁止\n\n・当モデルを使用して発生したトラブルに一切の責任を作成者は負いません。","url":"https://booth.pm/ja/items/1051118","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/00dca8ed-9814-4b4e-bd26-029d6809f5ee/i/1051118/ae86d7a4-f0ac-47ee-974f-7ca0d9174f0c_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="vZh4YczP58XPy7+t3dopef1VmeBs0rbVflckCeZOwYE="></script>
+    nonce="lScrlh7/TgrX2XQoKqeFdid83TL3bX5DxVc9BJmj7ig="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1051118/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               49
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1051118/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               49
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
