updated at: 2023-04-25 19:24, VRChat向け女の子型チュートリアルアバター&quot;VRChatChan&quot; - くまきち商店ワークス - BOOTH

--- a/VRChat/65/1050865.html
+++ b/VRChat/65/1050865.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "l/0Ft/QclP5+apkN1qPlzXstLW1fGxWn3f4uC/8sf50="></script>
+    "09IZzFoCcy98l2Qg29ep569E8M3nu5U6XHZvIAU+Up4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向け女の子型チュートリアルアバター\"VRChatChan\"","description":"VRChat向け女の子型チュートリアルアバター\"VRChatChan\"\n\n※本データは旧版になりました。\n大幅リニューアルした「プラクチカ・スピカ（キット仕様）」をご利用ください。\n\nメタセコイア４でVRC向けモデルを製作するための基本素材として製作しました。スキニング済みで、メタセコイア４EX版からFBXエクスポートするだけで、Unity上でGenericからHumanoidに問題なく認識されます。ボイスチャット向けブレンドシェイプ搭載のほか、自動アイトラッキング、自動まばたきに対応。\n\nVRCSDKのチュートリアルモデルとだいたい同じ構成のFBXになります。但しこちらは女性的な形状の素体です。\nメタセコイア向けには更に、曲面化（サブディビ）フリーズ前状態のメッシュも含めています。こちらを使うことで、比較的容易にお好みのお顔や体に改修することができます。\n\nmqo・mqxファイルと、エクスポート済FBXファイル同梱","url":"https://booth.pm/ja/items/1050865","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/6532652b-e023-4900-b8f3-4ba6c3a29217/i/1050865/a349c301-c884-4fe1-92ab-6bc412e758fd_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="l/0Ft/QclP5+apkN1qPlzXstLW1fGxWn3f4uC/8sf50="></script>
+    nonce="09IZzFoCcy98l2Qg29ep569E8M3nu5U6XHZvIAU+Up4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1050865/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               37
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1050865/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               37
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
