updated at: 2023-04-25 19:24, 【VRChat想定】パンプキンとランタン - 四季折々 - BOOTH

--- a/VRChat/07/1050207.html
+++ b/VRChat/07/1050207.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "c/GMCn4FSw0lyGkg30/FKeGopBhnCE0pEI+bBuRaQrs="></script>
+    "f6q5MMHMm5TC5mHoR87R8XbO9SnceRJL6T17nPyqcsU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat想定】パンプキンとランタン","description":"ハロウィン向けのかぼちゃとランタンです。884ポリゴン、アニメーションでゆらゆら揺れるよ。\n導入はプレハブをHipボーンの下に配置するだけ。\nダイナミックボーンでランタンが揺れます。\n\n改変、非改変問わず有償での再配布は禁止です。","url":"https://booth.pm/ja/items/1050207","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/45d5bd58-5888-4cb7-a435-4211f0f55407/i/1050207/541b8f98-3532-4a97-8bba-387b72292179_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="c/GMCn4FSw0lyGkg30/FKeGopBhnCE0pEI+bBuRaQrs="></script>
+    nonce="f6q5MMHMm5TC5mHoR87R8XbO9SnceRJL6T17nPyqcsU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1050207/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               78
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1050207/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               78
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
