updated at: 2023-04-25 19:26, [無料]紳士なりきりセット - Materia Sarria - BOOTH

--- a/VRChat/66/1048466.html
+++ b/VRChat/66/1048466.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "0Nh1+a26KNDtcsb33jzaeFva3rHN6R54F8+6ef4xr28="></script>
+    "/ewO1IkmmpaGxTkMt+8eTxPLjKN/x2dQbsepV/E+o6A="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[無料]紳士なりきりセット","description":"紳士なりきりセット　\n\n今回はハロウィンなどで使えるよう無料で配布しようと思い作りました\nいろいろと適当感ありますがご了承ください。\n\n帽子・杖に関しては長さを調整できるようにボーンを仕込んであります。\nアバターに調整したり、アニメーションで遊んだり。\n色々と遊んでください。\n\n※注意点\nfbxモデルを分けて作らずそのまま一つのモデルに複数ある形をとっています。\nset\n▸boushi\n▸boushi001(メッシュ)\n▸megane\n etc...\n↑のような形になりますので別々に使う場合メッシュをつっけんでから引き抜くことをお勧めします。\n例「▸boushi」←に「▸boushi001」を入れる\n\nまたここをどう改善したらいいなどアドバイス又は、バグの修正などはこちらまで\ntwitter: @Sarria____","url":"https://booth.pm/ja/items/1048466","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/1d14c665-3ae2-443e-9d88-4fc1502813e4/i/1048466/6088664b-b7fa-420c-875c-a7e028793268_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="0Nh1+a26KNDtcsb33jzaeFva3rHN6R54F8+6ef4xr28="></script>
+    nonce="/ewO1IkmmpaGxTkMt+8eTxPLjKN/x2dQbsepV/E+o6A="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1048466/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               737
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1048466/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               737
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
