updated at: 2023-04-25 19:26, 切り株 ３Dモデル - まめねこ仕立てのお針子やさん - BOOTH

--- a/VRChat/03/1047303.html
+++ b/VRChat/03/1047303.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "RYwdqnJlo/GkGHA2exdG/0dwMddjJ2b5dW33XlZwygg="></script>
+    "e/XmiHmBbbdJY8MxKz2pEVhtNk5wmTOnwzc5MsfKN44="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"切り株 ３Dモデル","description":"ポリゴン数：1968\n\nきのこと新芽のついた切り株モデルです。\nワールドのワンポイントなどにお使いいただけます。\n座れるような設定にして椅子の変わりやテーブルの代わりにしても良いかもしれません。\n\n地面に設置することを想定していますのでひっくり返すと空洞になっています。\n\n\n内容物----------------\n\nstump.fbx\n\nstump.obj\nstump.mtl\n\nread.txt（利用規約）\nstump.png（サンプル画像）\n\n【Texturesフォルダ】\nstump-dark.jpg\nstump-light.jpg\nstump-nomal.png\n-----------------------\n\nテクスチャは暗めのものと明るめのもの2枚が同梱されています。\n初期ではstump-dark.jpgが設定されております。\nノーマルマップも同梱しておりますのでお好みで設定してください。","url":"https://booth.pm/ja/items/1047303","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/01dc1112-4606-408e-8edd-553bdac9acd1/i/1047303/d466e8a5-30bb-4250-bad9-ffec200ab758_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="RYwdqnJlo/GkGHA2exdG/0dwMddjJ2b5dW33XlZwygg="></script>
+    nonce="e/XmiHmBbbdJY8MxKz2pEVhtNk5wmTOnwzc5MsfKN44="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1047303/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               58
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1047303/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               58
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
